<resources>
    <string name="app_name">Diploma</string>
    <string name="connect_description">Для использования устройства необходимо к нему подключиться. Список устройств представлен ниже</string>
    <string name="connect_address">Адрес</string>
    <string name="connect_name">Название</string>
    <string name="connect_status">Статус</string>
    <string name="connect_connect">Подключиться</string>
    <string name="connect_bluetooth_forbidden">Разрешение на использование Bluetooth не предоставлено</string>
    <string name="control_control">Управление</string>
    <string name="control_current_device">Текущее устройство</string>
    <string name="control_integrity_title">Целостность линий</string>
    <string name="control_configure">Конфигурировать</string>
    <string name="control_relay_title">Управление реле</string>
    <string name="control_generator_title">Генерация сигналов</string>
    <string name="control_record_title">Запись сигналов</string>
</resources>
