<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRelay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textViewTitle">

    <TextView
        android:id="@+id/textViewRelayTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:text="@string/connect_address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewRelayStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_margin="12dp"
        android:layout_weight="2"
        android:text="@string/connect_status"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/buttonStartRelay"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical|start"
            android:background="@color/colorSilver"
            android:text="@string/connect_name"
            android:textSize="14sp"
            app:srcCompat="@drawable/ic_play_arrow" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/buttonConfigureRelay"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical|start"
            android:background="@color/colorSilver"
            android:text="@string/control_configure"
            android:textSize="14sp"
            app:srcCompat="@drawable/ic_more_horiz" />
    </androidx.cardview.widget.CardView>
</LinearLayout>