<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSilver"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            app:title="@string/control_control">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/viewContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textVIewCurrentDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_vertical|start"
                android:textStyle="bold"
                android:text="@string/control_current_device" />

            <LinearLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_margin="12dp"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/connect_address"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_margin="12dp"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/connect_name"
                    android:layout_weight="2"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageViewStatus"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:textSize="14sp"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:src="@drawable/bg_status_drawable"/>

                    <ProgressBar
                        android:id="@+id/progressBarStatus"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:indeterminateTint="@color/colorShamrock"
                        android:layout_gravity="center"
                        android:visibility="gone"/>

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textVIewLineIntegrity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical|start"
                android:textStyle="bold"
                android:text="@string/control_integrity_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIntegrity"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_integrity"
                tools:itemCount="2"/>

            <TextView
                android:id="@+id/textVIewLineRelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical|start"
                android:textStyle="bold"
                android:text="@string/control_relay_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRelay"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_integrity"
                tools:itemCount="2"/>

            <TextView
                android:id="@+id/textVIewLineGenerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical|start"
                android:textStyle="bold"
                android:text="@string/control_generator_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGenerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_generator" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>