<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutGeneratorHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <TextView
            android:id="@+id/textViewGeneratorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:text="@string/connect_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewGeneratorStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="12dp"
            android:layout_weight="2"
            android:text="@string/connect_status"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/buttonStartGenerator"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/bg_silver_ripple"
                android:text="@string/connect_name"
                android:textSize="14sp"
                app:srcCompat="@drawable/ic_play_arrow" />

            <ProgressBar
                android:id="@+id/progressBarStartRecord"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:indeterminateTint="@color/colorShamrock"
                android:visibility="gone"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/buttonConfigureGenerator"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/bg_silver_ripple"
                android:text="@string/control_configure"
                android:textSize="14sp"
                app:srcCompat="@drawable/ic_more_horiz" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGeneratorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="8dp"
            android:layout_weight="1.5"
            android:text="Част"
            android:textColor="@color/colorGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewGeneratorFrequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:textSize="14sp"
            tools:text="50" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:text="Форма"
            android:textColor="@color/colorGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewGeneratorShape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:textSize="14sp"
            tools:text="SAW" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="8dp"
            android:layout_weight="1.5"
            android:text="Ампл"
            android:textColor="@color/colorGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewGeneratorAmplitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:textSize="14sp"
            tools:text="5 В" />

    </LinearLayout>
</LinearLayout>
